[project]
name = "drug-interaction-env"
version = "1.0.0"
description = "Pharmaceutical Drug Interaction Checker — OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["drug_interaction_env*"]
